# ferrite

./: .gitignore  CMakeLists.txt  README.md  config_linux.toml
ferritelog/: CMakeLists.txt
ferritelog/src/: ferritelog.c
ferritelog/src/include/: ferritelog.h
ferritewin/: CMakeLists.txt
ferritewin/src/: ferritewin.c  ferritewin_linux.c  ferritewin_win32.c
ferritewin/src/include/: ferriteinput.h  ferritewin.h
testbed/: CMakeLists.txt
testbed/src/: main.c
